--- a/web/public/login.html
+++ b/web/public/login.html
@@ -9,15 +9,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
         :root {
-            --fate-red: #C41E3A;
-            --fate-red-dark: #8B0000;
-            --fate-gold: #D4AF37;
-            --bg-deep: #0A0A0A;
-            --bg-dark: #1A1A1A;
-            --bg-card: #1E1E1E;
-            --text-primary: #F5F5F5;
-            --text-secondary: #B0B0B0;
-            --border-color: #2A2A2A;
+            --saber-blue-dark: #1E3A8A;
+            --saber-blue: #3B82F6;
+            --saber-blue-light: #60A5FA;
+            --saber-gold: #D4AF37;
+            --saber-gold-light: #FFD700;
+            --bg-primary: #0F172A;
+            --bg-secondary: #1E293B;
+            --bg-card: #1E293B;
+            --text-primary: #F8FAFC;
+            --text-secondary: #CBD5E1;
+            --text-muted: #94A3B8;
+            --border-color: rgba(59, 130, 246, 0.2);
         }
 
         * {
@@ -28,7 +31,7 @@
 
         body {
             font-family: 'Inter', sans-serif;
-            background: var(--bg-deep);
+            background: var(--bg-primary);
             min-height: 100vh;
             display: flex;
             align-items: center;
@@ -38,7 +41,7 @@
             overflow: hidden;
         }
 
-        /* Background Effects */
+        /* Background Effects - Minimalista */
         body::before {
             content: '';
             position: fixed;
@@ -47,47 +50,61 @@
             width: 100%;
             height: 100%;
             background: 
-                radial-gradient(circle at 20% 50%, rgba(196, 30, 58, 0.1) 0%, transparent 50%),
-                radial-gradient(circle at 80% 80%, rgba(212, 175, 55, 0.1) 0%, transparent 50%);
-            animation: patternShift 20s ease-in-out infinite;
+                radial-gradient(circle at 20% 30%, rgba(59, 130, 246, 0.05) 0%, transparent 50%),
+                radial-gradient(circle at 80% 70%, rgba(212, 175, 55, 0.05) 0%, transparent 50%);
+            animation: patternFloat 30s ease-in-out infinite;
             z-index: 0;
         }
 
         body::after {
             content: '';
             position: fixed;
-            top: -50%;
-            left: -50%;
-            width: 200%;
-            height: 200%;
-            background: radial-gradient(circle, rgba(196, 30, 58, 0.15) 0%, transparent 70%);
-            animation: glowPulse 15s ease-in-out infinite;
+            top: 50%;
+            left: 50%;
+            width: 600px;
+            height: 600px;
+            background: radial-gradient(circle, rgba(59, 130, 246, 0.1) 0%, transparent 70%);
+            transform: translate(-50%, -50%);
+            animation: glowPulse 20s ease-in-out infinite;
             z-index: 0;
+            border-radius: 50%;
         }
 
-        @keyframes patternShift {
-            0%, 100% { opacity: 1; }
-            50% { opacity: 0.7; }
+        @keyframes patternFloat {
+            0%, 100% { 
+                opacity: 1;
+                transform: translateY(0);
+            }
+            50% { 
+                opacity: 0.7;
+                transform: translateY(-20px);
+            }
         }
 
         @keyframes glowPulse {
-            0%, 100% { transform: scale(1) rotate(0deg); opacity: 0.3; }
-            50% { transform: scale(1.1) rotate(180deg); opacity: 0.5; }
+            0%, 100% { 
+                transform: translate(-50%, -50%) scale(1);
+                opacity: 0.5;
+            }
+            50% { 
+                transform: translate(-50%, -50%) scale(1.2);
+                opacity: 0.8;
+            }
         }
 
         .login-container {
-            background: rgba(30, 30, 30, 0.95);
-            backdrop-filter: blur(20px);
+            background: rgba(30, 41, 59, 0.9);
+            backdrop-filter: blur(20px) saturate(180%);
             border: 1px solid var(--border-color);
             border-radius: 24px;
             padding: 4rem 3rem;
-            max-width: 500px;
+            max-width: 480px;
             width: 100%;
-            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.5), 0 0 40px rgba(196, 30, 58, 0.2);
+            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.4), 0 0 40px rgba(59, 130, 246, 0.15);
             text-align: center;
             position: relative;
             z-index: 1;
-            animation: containerFadeIn 0.6s ease;
+            animation: containerFadeIn 0.6s cubic-bezier(0.4, 0, 0.2, 1);
         }
 
         @keyframes containerFadeIn {
@@ -108,35 +125,45 @@
         }
 
         .logo-icon {
-            width: 80px;
-            height: 80px;
-            color: var(--fate-red);
-            filter: drop-shadow(0 0 20px var(--fate-red));
-            animation: iconGlow 2s ease-in-out infinite;
+            width: 72px;
+            height: 72px;
+            color: var(--saber-blue);
+            filter: drop-shadow(0 0 16px rgba(59, 130, 246, 0.5));
+            animation: iconGlow 3s ease-in-out infinite;
+            transition: all 0.3s ease;
+        }
+
+        .logo-container:hover .logo-icon {
+            color: var(--saber-gold);
+            filter: drop-shadow(0 0 20px rgba(212, 175, 55, 0.6));
         }
 
         @keyframes iconGlow {
-            0%, 100% { filter: drop-shadow(0 0 20px var(--fate-red)); }
-            50% { filter: drop-shadow(0 0 30px var(--fate-red)) drop-shadow(0 0 40px var(--fate-gold)); }
+            0%, 100% { 
+                filter: drop-shadow(0 0 16px rgba(59, 130, 246, 0.5));
+            }
+            50% { 
+                filter: drop-shadow(0 0 24px rgba(59, 130, 246, 0.7)) drop-shadow(0 0 32px rgba(212, 175, 55, 0.4));
+            }
         }
 
         h1 {
             font-family: 'Cinzel', serif;
-            background: linear-gradient(135deg, var(--fate-red), var(--fate-gold));
+            background: linear-gradient(135deg, var(--saber-blue-light), var(--saber-gold));
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
             margin-bottom: 0.75rem;
-            font-size: 2.5rem;
-            font-weight: 700;
-            letter-spacing: 2px;
+            font-size: 2.25rem;
+            font-weight: 600;
+            letter-spacing: 1px;
         }
 
         .subtitle {
             color: var(--text-secondary);
             margin-bottom: 2.5rem;
             line-height: 1.6;
-            font-size: 1.05rem;
+            font-size: 1rem;
         }
 
         .login-btn {
@@ -144,20 +171,20 @@
             align-items: center;
             justify-content: center;
             gap: 0.75rem;
-            background: linear-gradient(135deg, #5865F2, #4752C4);
+            background: linear-gradient(135deg, var(--saber-blue), var(--saber-blue-dark));
             color: white;
-            padding: 1.25rem 2.5rem;
+            padding: 1.125rem 2.5rem;
             border-radius: 12px;
             text-decoration: none;
-            font-weight: 600;
-            font-size: 1.1rem;
+            font-weight: 500;
+            font-size: 1rem;
             transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
             border: none;
             cursor: pointer;
             width: 100%;
             position: relative;
             overflow: hidden;
-            box-shadow: 0 4px 15px rgba(88, 101, 242, 0.4);
+            box-shadow: 0 8px 32px rgba(59, 130, 246, 0.3);
         }
 
         .login-btn::before {
@@ -168,7 +195,7 @@
             width: 0;
             height: 0;
             border-radius: 50%;
-            background: rgba(255, 255, 255, 0.2);
+            background: rgba(255, 255, 255, 0.15);
             transform: translate(-50%, -50%);
             transition: width 0.6s, height 0.6s;
         }
@@ -180,12 +207,13 @@
 
         .login-btn:hover {
             transform: translateY(-3px);
-            box-shadow: 0 8px 25px rgba(88, 101, 242, 0.6);
+            box-shadow: 0 12px 40px rgba(59, 130, 246, 0.5);
+            background: linear-gradient(135deg, var(--saber-blue-light), var(--saber-blue));
         }
 
         .login-btn svg {
-            width: 24px;
-            height: 24px;
+            width: 20px;
+            height: 20px;
             transition: transform 0.3s ease;
         }
 
@@ -194,16 +222,17 @@
         }
 
         .error {
-            background: rgba(196, 30, 58, 0.15);
-            border: 1px solid var(--fate-red);
+            background: rgba(239, 68, 68, 0.1);
+            border: 1px solid rgba(239, 68, 68, 0.3);
             border-radius: 12px;
-            padding: 1.25rem;
+            padding: 1.125rem;
             margin-bottom: 1.5rem;
-            color: var(--fate-red);
+            color: #EF4444;
             display: flex;
             align-items: center;
             gap: 0.75rem;
-            animation: errorSlide 0.4s ease;
+            animation: errorSlide 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+            text-align: left;
         }
 
         @keyframes errorSlide {
@@ -218,35 +247,52 @@
         }
 
         .error svg {
-            width: 20px;
-            height: 20px;
+            width: 18px;
+            height: 18px;
             flex-shrink: 0;
         }
 
         .info {
-            background: rgba(212, 175, 55, 0.1);
-            border: 1px solid var(--fate-gold);
+            background: rgba(212, 175, 55, 0.08);
+            border: 1px solid rgba(212, 175, 55, 0.2);
             border-radius: 12px;
-            padding: 1.25rem;
+            padding: 1.125rem;
             margin-top: 2rem;
-            color: var(--fate-gold);
-            font-size: 0.95rem;
+            color: var(--saber-gold);
+            font-size: 0.9rem;
             line-height: 1.6;
             display: flex;
             align-items: flex-start;
             gap: 0.75rem;
+            text-align: left;
         }
 
         .info svg {
-            width: 20px;
-            height: 20px;
+            width: 18px;
+            height: 18px;
             flex-shrink: 0;
             margin-top: 2px;
+            color: var(--saber-gold);
         }
 
         .info strong {
             display: block;
             margin-bottom: 0.5rem;
+            color: var(--saber-gold-light);
+        }
+
+        @media (max-width: 480px) {
+            .login-container {
+                padding: 3rem 2rem;
+            }
+
+            h1 {
+                font-size: 1.875rem;
+            }
+
+            .subtitle {
+                font-size: 0.95rem;
+            }
         }
     </style>
 </head>
